# playground-rust

./: AGENTS.md  Cargo.toml  README.md
.claude/: settings.json
Course/ax01-helloworld/: Cargo.toml
Course/ax01-helloworld/src/: main.rs
Course/ax02-variables/: Cargo.toml
Course/ax02-variables/src/: main.rs
Course/ax03-datatypes/: Cargo.toml
Course/ax04-function/: Cargo.toml
Course/ax04-function/src/: main.rs
Course/ax05-control-flow/: Cargo.toml
Course/ax05-control-flow/src/: main.rs
Course/ax06-ownership/: Cargo.toml
Course/ax07-reference-borrow/: Cargo.toml
Course/ax07-reference-borrow/src/: main.rs
Course/ax08-structs/: Cargo.toml
Course/ax09-method-syntax/: Cargo.toml
Course/ax10-enums/: Cargo.toml
Course/ax11-opiton/: Cargo.toml
Course/ax12-match/: Cargo.toml
Course/ax13-package/: Cargo.toml
Course/ax13-package/restaurant/: Cargo.toml
Course/ax14-collections/: Cargo.toml
Course/ax15-error/: Cargo.toml
Course/ax16-typeinto/: Cargo.toml
Course/ax16-typeinto/src/: lib.rs
Course/ax17-minigrep/: Cargo.toml
Course/ax20-lifecycle/: Cargo.toml
Course/ax21-closure/: Cargo.toml
Course/ax22-my-macro/: Cargo.toml
Course/ax22-my-macro/hello_macro/: Cargo.toml
Course/ax22-my-macro/hello_macro/hello_macro_derive/: Cargo.toml
Course/ax22-my-macro/hello_macro/hello_macro_derive/src/: lib.rs
Course/ax23-format-output/: Cargo.toml
Course/ax39-async-await/: Cargo.toml
Course/ax40-commandline/: Cargo.toml
Course/ax40-commandline/src/: main.rs
Course/ax41-owner-borrow/: Cargo.toml
Exercises/exc00/: Cargo.toml
Exercises/exc01-clap/: Cargo.toml
Exercises/exc01-clap/src/command/: md5sum.rs  sha256.rs
Exercises/exc02-tokio/: Cargo.toml
Exercises/exc03-ratatui-counter/: Cargo.toml
Exercises/exc04-ratatui-json/: Cargo.toml
Exercises/exc05-ratatui-async-counter/: Cargo.toml
Exercises/exc06-bzlib-sys/: Cargo.toml
Exercises/exc06-bzlib-sys/src/: bindings.rs
Libraries/lib03-compression/: Cargo.toml
Libraries/lib05-crossbeam/: Cargo.toml
Libraries/lib06-derive-more/: Cargo.toml
Libraries/lib08-dotenv/: Cargo.toml
Libraries/lib10-hash/: Cargo.toml
Libraries/lib10-hash/src/: lib.rs
Libraries/lib11-http/: Cargo.toml
Libraries/lib12-indicatif/: Cargo.toml
Libraries/lib13-logging/: Cargo.toml
Libraries/lib14-once-cell/: Cargo.toml
Libraries/lib17-rand/: Cargo.toml
Libraries/lib17-rand/src/: main.rs
Libraries/lib18-semver/: Cargo.toml
Libraries/lib19-serde/: Cargo.toml
Libraries/lib20-strum/: Cargo.toml
Libraries/lib21-tera/: Cargo.toml
Libraries/lib22-typed-builder/: Cargo.toml
Libraries/lib23-url/: Cargo.toml
Libraries/lib25-zip/: Cargo.toml
Libraries/lib26-cryptography/: Cargo.toml
Libraries/lib27-log4/: Cargo.toml
Opencv/run-over-cv/examples/: 14-contour-feature.rs
Standard/std01-default/: Cargo.toml
Standard/std02-error/: Cargo.toml
Standard/std03-ffi/: Cargo.toml
Standard/std04-iter/: Cargo.toml
Standard/std05-mem/: Cargo.toml
Standard/std06-option/: Cargo.toml
Standard/std07-path/: Cargo.toml
Standard/std08-result/: Cargo.toml
Standard/std09-time/: Cargo.toml
Standard/std10-env/: Cargo.toml
Standard/std10-env/src/: lib.rs
Tui/: AGENTS.md  README.md
Tui/01-counter/: Cargo.toml
Tui/01-counter/examples/: helloworld.rs
Tui/01-counter/src/: app.rs  event.rs  main.rs  ui.rs
Tui/02-json/: Cargo.toml
Tui/02-json/src/: app.rs  main.rs  tui.rs  ui.rs
Tui/03-async-counter/: Cargo.toml
Tui/03-async-counter/src/: main.rs  ui.rs
