[package]
name = "tui02"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.30" }
crossterm = "0.29"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
