[package]
name = "tui03"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.30" }
crossterm = { version = "0.29", features = ["event-stream"] }
anyhow = "1"
tokio = { version = "1.50", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
log = "0.4"
